@@ -17,23 +17,28 @@ fg <- setRefClass("foo", list(bar = "numeric", flag = "character",
                       b
                   } )
                   )
+fg$lock("flag")
+stopifnot(identical(fg$lock(), "flag"))
+
 ff <- new("foo", bar = 1.5)
 stopifnot(identical(ff$bar, 1.5))
 ff$bar <- pi
 stopifnot(identical(ff$bar, pi))
+## flag has not yet been set
+ff$flag <- "flag test"
+stopifnot(identical(ff$flag, "flag test"))
+## but no second assign
+stopifnot(is(tryCatch(ff$flag <- "new", error = function(e)e), "error"))
+
 ## test against generator
 
-f2 <- fg$new(bar = pi)
+f2 <- fg$new(bar = pi, flag = "flag test")
 ## identical does not return TRUE if *contents* of env are identical
 stopifnot(identical(ff$bar, f2$bar), identical(ff$flag, f2$flag))
-
-f2$flag <- "standard flag"
-stopifnot(identical(f2$flag, "standard flag"))
+## but flag was now assigned once
+stopifnot(is(tryCatch(f2$flag <- "new", error = function(e)e), "error"))
 
 str(f2)
-
-## fg$lock("flag")
-## tryCatch(f2$flag <- "other", error = function(e)e)
 
 
 ## add some accessor methods
@@ -128,7 +133,7 @@ str(f3)
 
 ## similar to $import() but using superclass object in the $new() call
 ## The explicitly supplied flag= should override and be allowed
-## by the default $initialize() 
+## by the default $initialize()
 f3b <- foo3$new(f2, flag = as("Other", "ratedChar"),
                 flag2 = as("More", "ratedChar"))
 ## check that inherited and direct field assignments worked
@@ -136,7 +141,7 @@ stopifnot(identical(f3b$tag, f2$tag),
           identical(f3b$flag, as("Other", "ratedChar")),
           identical(f3b$flag2, as("More", "ratedChar")))
 
-## a class with an initialize method, and an extra slot
+## a class with an initialize method, and an extra slot (legal, not a good idea)
 setOldClass(c("simple.list", "list"))
 fg4 <- setRefClass("foo4",
             contains = "foo2",
@@ -149,7 +154,7 @@ fg4 <- setRefClass("foo4",
             representation = list(made = "simple.list")
             )
 
-f4 <- new("foo4", flag = "another test", bar = 1:3)
+f4 <- new("foo4", flag = as("another test", "ratedChar"), bar = 1:3)
 stopifnot(identical(f4@made, R.version))
 
 ## a trivial class with no fields, using fields = list(), failed up to rev 56035
